@@ -1,0 +1,7 @@
+require 'rspec'
+require 'milk_cap'
+
+RSpec.configure do |config|
+  config.color_enabled = true
+  config.formatter     = 'documentation'
+end
