@@ -1,3 +1,0 @@
-
-Dir["#{File.dirname(__FILE__)}/*_test.rb"].each { |path| load(path) }
-
